

<!-- The main content view -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_frame"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBackgroundColor"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="?attr/colorCard"
                    card_view:cardUseCompatPadding="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    >
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="40sp"
                                android:layout_centerHorizontal="true"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/welcomeval" />
                        </RelativeLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="128dp"
                                android:layout_height="128dp"
                                android:src="@drawable/arrow"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/addtaskval"
                                android:layout_gravity="center"
                                android:textAppearance="?android:attr/textAppearanceMedium"/>
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="?attr/colorCard"
                    card_view:cardUseCompatPadding="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    >
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_centerInParent="true"
                            android:text="@string/devicestatus" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/lineardevicestatus"
                            android:orientation="vertical">



                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardBackgroundColor="?attr/colorCard"

                    card_view:cardUseCompatPadding="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    >
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:layout_centerInParent="true"
                                android:text="@string/devicetimein" />
                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1"></View>
                            <Button
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:id="@+id/refreshbutton"
                                android:background="@drawable/refresh_icon"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:id="@+id/lineartimeinstate"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:id="@+id/textviewtotaltime"
                                android:layout_gravity="center_horizontal"/>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:id="@+id/lineartimeinstate2">

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    card_view:cardUseCompatPadding="true"
                    card_view:cardBackgroundColor="?attr/colorCard"
                    android:foreground="?android:attr/selectableItemBackground"
                    >
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/servicestatusval"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textviewservicestatus"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>






</FrameLayout>

    <!-- The navigation drawer -->

